2005-03-28  Dan Williams <dcbw@redhat.com>

	* src/NetworkManagerDevice.c
		- (mdio_read): Fix two bugs that caused all devices to fail
			the MII carrier detection support checks

2005-03-22  Dan Williams <dcbw@redhat.com>

	Patch from Bill Moss:
	* src/NetworkManagerInfoDbus.c
		- (nmi_dbus_update_network_auth_method, nmi_dbus_get_network_properties):
			free leaked GConf values

2005-03-12  Dan Williams <dcbw@redhat.com>

	Patch from Nathaniel McCallum:
	* src/NetworkManagerDevice.c
		- (nm_device_set_wireless_config): Increase timeout for some devices

2005-03-04  Dan Williams <dcbw@redhat.com>

	Patch from Peter Jones:
	- Make stuff work with gcc 4.0

2005-02-28  Dan Williams <dcbw@redhat.com>

	Tag STABLE_0_3_4_RELEASE

	* configure.in:
		- Bump version to 0.3.4

2005-02-27  Jim Huang  <jserv@kaffe.org>

	* configure.in: Added "zh_TW" (Traditional Chinese) to ALL_LINGUAS.

2005-02-27  Dan Williams  <dcbw@redhat.com>

	Patch from Bill Moss:
	* panel-applet/NMWirelessAppletDbus.c
		- Make sure strength for current access point is up-to-date when we
			update the gui data model

2005-02-27  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2005-02-27  Dan Williams  <dcbw@redhat.com>

	* src/backends/NetworkManagerRedHat.c
		- (nm_system_init): Kill any dhclient processes lying around as well
			as stopping 'nifd' if its already been started.  NetworkManager
			subsumes the functions of nifd (kicking mDNSResponder, autoip)

2005-02-27  Dan Williams  <dcbw@redhat.com>

	* panel-applet/NMWirelessApplet.c
		- (nmwa_destroy): Really mean to destroy GUI data model first, then
			dbus data model, not the GUI data model twice.

2005-02-27  Dan Williams  <dcbw@redhat.com>

	* panel-applet/NMWirelessApplet.[ch]
	  panel-applet/NMWirelessAppletDbus.[ch]
		- Move to incremental network updates.  Instead of blowing away our list
			of devices every time we get a signal from NetworkManager, we now